# rill

./: .dockerignore  .gitignore  .mcp.json  AI_AGENT_RESEARCH.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PROOF_OF_CONDUCT_REVIEW.md  PROOF_OF_CONDUCT_SPEC.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  migrate-rill-agents.sh
.claude/: settings.json  verify-project.sh
.claude-backup-20260208-173336/: settings.json  settings.local.json
.claude-backup-20260208-173336/commands/: save-session.md
.claude-backup-20260208-173336/memory/: MEMORY.md  blockers.md  changelog.md  consensus-agent.md  core-agent.md  decay-agent.md  decisions.md  devops-agent.md  node-agent.md  test-agent.md  wallet-agent.md
.claude-backup-20260208-173336/memory/sessions/: 2026-02-07-rill-node-lib.md  2026-02-07-rill-wallet.md  2026-02-08-bins-rill-node.md
.claude-backup-20260208-173336/rules/: memory.md
.claude/agents/: consensus.md  core.md  decay.md  devops-agent.md  devops.md  network.md  node.md  test-agent.md  test.md  wallet.md
.claude/memory/: MEMORY.md  blockers.md  changelog.md  decisions.md  network-agent.md
.claude/rules/: git-workflow.md  isolation.md  project-isolation.md  rust-conventions.md
.claude/skills/architecture/: SKILL.md
.claude/skills/decay-mechanics/: SKILL.md
.claude/skills/save-session/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build-linux.yml
bins/rill-cli/: Cargo.toml
bins/rill-cli/src/: main.rs
bins/rill-explorer/: Cargo.toml
bins/rill-explorer/src/: config.rs  main.rs  routes.rs  rpc.rs
bins/rill-explorer/src/static/: index.html
bins/rill-faucet/: Cargo.toml
bins/rill-faucet/src/: config.rs  discord.rs  main.rs  rate_limit.rs  routes.rs  send.rs
bins/rill-faucet/src/static/: ai-plugin.json  create_wallet.html  index.html  openapi.json  robots.txt  well-known-agent.json  well-known-rill-agents.json
bins/rill-miner/: Cargo.toml
bins/rill-miner/src/: main.rs
bins/rill-node/: Cargo.toml
bins/rill-node/src/: main.rs
crates/rill-consensus/: CLAUDE.md  Cargo.toml
crates/rill-consensus/benches/: consensus_benches.rs
crates/rill-consensus/src/: checkpoint.rs  engine.rs  lib.rs  randomx.rs
crates/rill-core/: CLAUDE.md  Cargo.toml
crates/rill-core/benches/: core_benches.rs
crates/rill-core/src/: address.rs  agent.rs  block_validation.rs  chain_state.rs  cluster.rs  conduct.rs  constants.rs  crypto.rs  difficulty.rs  error.rs  genesis.rs  lib.rs  mempool.rs  merkle.rs  reward.rs  traits.rs  types.rs  validation.rs
crates/rill-decay/: CLAUDE.md  Cargo.toml
crates/rill-decay/benches/: decay_benches.rs  decay_benchmarks.rs
crates/rill-decay/src/: cluster.rs  engine.rs  lib.rs  sigmoid.rs
crates/rill-network/: CLAUDE.md  Cargo.toml
crates/rill-network/src/: behaviour.rs  config.rs  lib.rs  peer_scoring.rs  protocol.rs  rate_limiter.rs  service.rs  sync.rs
crates/rill-node/: CLAUDE.md  Cargo.toml
crates/rill-node/benches/: node_benches.rs
crates/rill-node/src/: config.rs  lib.rs  node.rs  rpc.rs  storage.rs
crates/rill-node/tests/: storage_test.rs
crates/rill-tests/: Cargo.toml
crates/rill-tests/src/: helpers.rs  lib.rs
crates/rill-tests/tests/: adversarial.rs  e2e.rs  multi_node.rs  security_audit.rs
crates/rill-wallet/: CLAUDE.md  Cargo.toml
crates/rill-wallet/src/: builder.rs  coin_selection.rs  encryption.rs  error.rs  keys.rs  lib.rs  mnemonic.rs  wallet.rs
docs/: AGENT-RUNNER.md  ARCHITECTURE.md  BLOCKERS.md  CHANGELOG.md  TESTNET.md
infra/: README.md  azure-testnet.sh  deploy-faucet.sh  deploy-landing.sh  do-testnet.sh  nginx-explorer.conf  nginx-faucet.conf  nginx-landing.conf  rill-explorer.service  rill-faucet.service
marketing/: CLAUDE.md  rill.pen
marketing/.claude/: settings.json  verify-marketing.sh
marketing/.claude-backup-20260208-173336/: settings.local.json
marketing/.claude/agents/: brand-architect.md  community-lead.md  content-strategist.md  graphic-designer.md  social-media.md  web-lead.md
marketing/.claude/rules/: brand-compliance.md  isolation.md
marketing/.claude/skills/brand-identity/: SKILL.md
marketing/.claude/skills/copy-library/: SKILL.md
marketing/.claude/skills/editorial-calendar/: SKILL.md
marketing/docs/: .gitignore  package-lock.json  package.json  tailwind.config.ts
marketing/docs/src/app/: globals.css  layout.tsx  page.tsx
marketing/docs/src/components/: CodeBlock.tsx  MobileNav.tsx  Sidebar.tsx
marketing/explorer/: package-lock.json  package.json  tailwind.config.ts
marketing/explorer/src/app/: globals.css  layout.tsx  page.tsx
marketing/explorer/src/components/: Footer.tsx  HashChip.tsx  Nav.tsx
marketing/explorer/src/lib/: rpc.ts  time.ts
marketing/faucet/: package-lock.json  package.json  tailwind.config.ts
marketing/faucet/src/app/: globals.css  layout.tsx  page.tsx
marketing/faucet/src/components/: Nav.tsx  (+1 more)
marketing/outputs/: agent-bridge-announcement-2026-02-24.md  agent-discovery-announcement-2026-03-05.md  brand-guidelines.md  discord-announcement-launch.md  discord-channel-descriptions.md  discord-pinned-messages.md  discord-server-spec.md  mcp-announcement-2026-02-21.md  monitorss-setup-guide.md  pencil-ui-design-brief.md  rcp-001-dev-fund.md  testnet-incentive-posts.md  twitter-launch-thread-2026-02-19.md  x-thread-poc-launch.md
marketing/scripts/: .bridge_state.json  add_feed_channels.py  discord_telegram_bridge.py  setup_discord.py
marketing/shared/design-tokens/: tailwind.config.js  tokens.css  tokens.json
marketing/website/: package-lock.json  package.json  tailwind.config.ts
shared/design-tokens/: tokens.json
tools/rill-mcp/: .env.example  .npmignore  README.md  package-lock.json  package.json  server.json  tsconfig.json
tools/rill-mcp/agents/: decay-advisor.md  explorer-agent.md  mining-helper.md  wallet-assistant.md
tools/rill-mcp/src/: config.ts  index.ts
tools/rill-openai/: functions.json
tools/rill-python-sdk/: README.md  pyproject.toml
tools/rill-python-sdk/rill_agent/: __init__.py  client.py  langchain_tools.py
web/: index.html
(+50 files in other folders)
