[package]
name = "rill-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rill-node"
path = "src/main.rs"

[dependencies]
rill-node-lib = { path = "../../crates/rill-node" }
rill-core = { path = "../../crates/rill-core" }
tokio = { workspace = true, features = ["signal"] }
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex.workspace = true
