[package]
name = "rill-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and traits for the Rill protocol"

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
bs58.workspace = true
hex.workspace = true
thiserror.workspace = true
bytes.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
