[package]
name = "rill-decay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Progressive concentration decay engine for Rill"

[dependencies]
rill-core = { path = "../rill-core" }
blake3.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
ordered-float.workspace = true
num-traits.workspace = true
tracing.workspace = true
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
rand.workspace = true
tempfile.workspace = true

[[bench]]
name = "decay_benchmarks"
harness = false
