[package]
name = "rill-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Adversarial security tests for RillCoin"
publish = false

[dependencies]
rill-core = { path = "../rill-core" }
rill-decay = { path = "../rill-decay" }
rill-consensus = { path = "../rill-consensus" }
rill-network = { path = "../rill-network" }
rill-wallet = { path = "../rill-wallet" }
rill-node-lib = { path = "../rill-node", package = "rill-node-lib" }

[dev-dependencies]
bincode = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
