[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rill-agent-sdk"
version = "0.1.0"
description = "Python SDK for RillCoin AI agent operations — Proof of Conduct reputation on L1"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "RillCoin", email = "dev@rillcoin.com" }]
keywords = [
    "rillcoin",
    "cryptocurrency",
    "ai-agent",
    "blockchain",
    "proof-of-conduct",
    "langchain",
    "llm",
    "web3",
    "mcp",
    "concentration-decay",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]

[project.urls]
Homepage = "https://rillcoin.com"
Repository = "https://github.com/rillcoin/rill"
Documentation = "https://faucet.rillcoin.com/api/openapi.json"
